<resources>
    <string name="app_name">DnD_Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_overview_chara">Overview</string>
    <string name="menu_dice">Dice</string>
    <string name="menu_edit_chara">Character</string>
    <string name="no_characters">You got no Characters</string>
    <string name="CharacterCreatorText">Use the Charactor Creator to design your Character Step by Step</string>
    <string name="character_creation_title">Character Creation</string>
    <string name="playerName">Player name</string>
    <string name="charaName">Character name:</string>
    <string name="ageField">Age</string>
    <string name="autofillHintPlayerName">Fill in the players name of the character which is created</string>
    <string name="fapDescription">Add a new Character to the Gallery</string>
    <string name="character_builder_string">Character Builder</string>
    <string name="buttonAbilitiesString">Create your Abilities</string>
    <string name="buttonRaceString">Choose your Race</string>
    <string name="buttonClassString">Choose your Class</string>
    <string name="buttonSkillString">Choose your Skills</string>
    <string name="buttonFeatString">Choose your Feats</string>
    <string name="determine_score_string">Determine your Ability Score</string>
    <string name="choose_race_string">Choose your Race</string>
    <string name="choose_class_string">Choose your Class</string>
    <string name="choose_skills_string">Choose your Skills</string>
    <string name="choose_feat_string">Choose a Feat</string>
    <string name="reroll_button_description">Reroll the Scores</string>
    <string name="notes">Notes</string>
    <string name="character_gallery_fragment">Character Gallery Fragment</string>
    <string name="chara_sheet_fragment">Character Details Fragment</string>
    <string name="healthString">Health</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="characterpicture">characterPicture</string>


</resources>