<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.DnD_Companion.FullscreenContainer"
    android:visibility="visible"
    tools:context=".layout.fragment.NewCharaFragment"
    tools:visibility="visible">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_builder_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonAbilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonClassString"/>

    <Button
        android:id="@+id/buttonRace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonRaceString"/>

    <Button
        android:id="@+id/buttonClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonClassString"/>
    <Button
        android:id="@+id/buttonFeats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonFeatString"/>
    <Button
        android:id="@+id/buttonSkills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSkillString"/>
</LinearLayout>