<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_over_view">

    <fragment
        android:id="@+id/nav_over_view"
        android:name="de.buadrabas.dnd_companion.ui.chara_overview.CharaOverview"
        android:label="@string/menu_overview_chara"
        tools:layout="@layout/fragment_chara_overview" />

    <fragment
        android:id="@+id/nav_dice"
        android:name="de.buadrabas.dnd_companion.ui.gallery.GalleryFragment"
        android:label="@string/menu_dice"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_edit_chara"
        android:name="de.buadrabas.dnd_companion.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_edit_chara"
        tools:layout="@layout/fragment_slideshow" />
</navigation>