<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/character_creation_title" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CharacterCreatorText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ability_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/determine_score_string" />

                <TextView
                    android:id="@+id/ability_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Strength +1"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/race_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/choose_race_string" />

                <TextView
                    android:id="@+id/race_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Strength +1"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/class_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/choose_class_string" />

                <TextView
                    android:id="@+id/class_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Strength"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/feat_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_feat_string" />

                <TextView
                    android:id="@+id/feat_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Strength +1"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/skill_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/choose_skills_string" />

                <TextView
                    android:id="@+id/skill_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Strength +1"
                    android:visibility="gone" />
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
